--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -8,32 +8,46 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:background="#38AE80">
-
+        android:layout_height="130dp"
+        android:background="@color/white">
 
         <TextView
-            android:id="@+id/tv_month"
+            xmlns:tools="http://schemas.android.com/tools"
+            tools:ignore="all"
+            android:id="@+id/calendar_month"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="40dp"
-            android:text="@string/calendar_month"
-            android:textColor="#ffffff"
+            android:textColor="@color/calendar_select"
             android:textSize="30sp" />
 
-        <TextView
-            android:id="@+id/tv_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="57dp"
-            android:layout_marginStart="80dp"
-            android:text="@string/calendar_year"
-            android:textColor="#ffffff" />
+        <Button
+            android:id="@+id/calendar_close"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="52dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/close_icon"
+            android:gravity="center"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:padding="0dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="95dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:background="@color/calendar_line"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="25dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
             android:layout_alignParentBottom="true"
             android:orientation="horizontal">
 
@@ -43,8 +57,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/calendar_sunday"
-                android:textColor="#ffffff"
-                android:textSize="13sp" />
+                android:textColor="@color/calendar_week"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="0dp"
@@ -52,8 +66,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/calendar_monday"
-                android:textColor="#ffffff"
-                android:textSize="13sp" />
+                android:textColor="@color/calendar_week"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="0dp"
@@ -61,8 +75,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/calendar_tuesday"
-                android:textColor="#ffffff"
-                android:textSize="13sp" />
+                android:textColor="@color/calendar_week"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="0dp"
@@ -70,8 +84,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/calendar_wednesday"
-                android:textColor="#ffffff"
-                android:textSize="13sp" />
+                android:textColor="@color/calendar_week"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="0dp"
@@ -79,8 +93,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/calendar_thursday"
-                android:textColor="#ffffff"
-                android:textSize="13sp" />
+                android:textColor="@color/calendar_week"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="0dp"
@@ -88,8 +102,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/calendar_friday"
-                android:textColor="#ffffff"
-                android:textSize="13sp" />
+                android:textColor="@color/calendar_week"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="0dp"
@@ -97,8 +111,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/calendar_saturday"
-                android:textColor="#ffffff"
-                android:textSize="13sp" />
+                android:textColor="@color/calendar_week"
+                android:textSize="16sp" />
         </LinearLayout>
 
     </RelativeLayout>
