--- a/app/src/main/res/layout/item_recording_text.xml
+++ b/app/src/main/res/layout/item_recording_text.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true">
-    <EditText
+    <com.shining.memo.widget.SelectEditText
         android:id="@+id/item_editText"
         android:textIsSelectable="true"
         android:layout_width="match_parent"
