--- a/app/src/main/res/layout/item_recording_audio.xml
+++ b/app/src/main/res/layout/item_recording_audio.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="15dp"
+    android:paddingBottom="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <EditText
@@ -30,22 +32,22 @@
             app:layout_constraintStart_toEndOf="@id/btn_edit_strat"
             app:layout_constraintTop_toTopOf="parent">
 
-            <Button
+            <ImageButton
                 android:id="@+id/item_btn_play"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="17.5dp"
-                android:layout_height="17.5dp"
+                android:layout_width="45dp"
+                android:layout_height="match_parent"
+                android:paddingTop="7.5dp"
+                android:paddingBottom="7.5dp"
+                android:paddingStart="10dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="15dp"
-                android:background="@drawable/play_audio_icon"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true"/>
+                android:background="@android:color/transparent"
+                android:src="@drawable/play_audio_icon"
+                android:scaleType="centerInside" />
 
             <TextView
                 android:id="@+id/start_divider"
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
                 android:layout_toRightOf="@id/item_btn_play"
                 android:background="@color/half_transparent_orange" />
 
@@ -56,7 +58,7 @@
                 android:layout_toLeftOf="@id/audio_time"
                 android:layout_toRightOf="@id/start_divider"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="5dp"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
                 android:splitTrack="false"
@@ -80,17 +82,18 @@
                 android:id="@+id/end_divider"
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:layout_marginRight="10dp"
                 android:layout_toLeftOf="@id/item_btn_delete"
                 android:background="@color/half_transparent_orange" />
-            <Button
+            <ImageButton
                 android:id="@+id/item_btn_delete"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="17.5dp"
-                android:layout_height="17.5dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/delete_icon"
+                android:layout_width="45dp"
+                android:layout_height="match_parent"
+                android:paddingTop="7.5dp"
+                android:paddingBottom="7.5dp"
+                android:paddingEnd="10dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/delete_audio_icon"
+                android:background="@android:color/transparent"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"/>
         </RelativeLayout>
