--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -63,7 +63,7 @@
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:background="@color/calendar_line"
@@ -147,7 +147,7 @@
 
     <com.shining.calendar.calendar.NCalendar
         android:id="@+id/calendar_content"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         app:firstDayOfWeek="Sunday"
         app:layout_constraintBottom_toTopOf="@+id/back_to_top"
