--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -56,29 +56,13 @@
             android:layout_width="22dp"
             android:layout_height="22dp"
             android:layout_marginStart="25dp"
-            android:background="@drawable/cancel_icon"
+            android:background="@drawable/back_icon"
             android:gravity="center"
             android:minHeight="0dp"
             android:minWidth="0dp"
             android:padding="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/add_item"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/add_new_item_icon"
-            android:gravity="center"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:padding="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/list_confirm"
-            app:layout_constraintStart_toEndOf="@+id/list_cancel"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
