--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -10,35 +10,47 @@
     android:focusableInTouchMode="true"
     tools:layout_editor_absoluteY="25dp">
 
-    <EditText
-        android:id="@+id/list_title"
-        android:layout_width="0dp"
+    <RelativeLayout
+        android:id="@+id/list_title_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="25dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="@string/list_hint_title"
-        android:inputType="textPersonName"
-        android:paddingBottom="12dp"
-        android:textColor="@color/recording_title"
-        android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent">
+        <EditText
+            android:id="@+id/list_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingEnd="25dp"
+            android:paddingStart="25dp"
+            android:paddingTop="25dp"
+            android:ems="10"
+            android:hint="@string/list_hint_title"
+            android:inputType="textMultiLine"
+            android:paddingBottom="12dp"
+            android:textColor="@color/recording_title"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:background="@null" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="20dp"
+            android:background="@color/recording_title"
+            android:layout_below="@+id/list_title"/>
+    </RelativeLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="40dp"
         android:background="@color/white"
         android:descendantFocusability="afterDescendants"
         app:layout_constraintBottom_toTopOf="@+id/list_menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/list_title" />
+        app:layout_constraintTop_toBottomOf="@+id/list_title_layout" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/list_menu"
